{
  "version": 4,
  "terraform_version": "0.12.0",
  "serial": 15,
  "lineage": "a3eb0c5b-3ba4-24c3-bb0d-67a38d045b07",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "alb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:632199730033:loadbalancer/app/alb-Akin/6cb21b663a2700dc",
            "arn_suffix": "app/alb-Akin/6cb21b663a2700dc",
            "dns_name": "alb-Akin-1996878245.us-west-2.elb.amazonaws.com",
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-west-2:632199730033:loadbalancer/app/alb-Akin/6cb21b663a2700dc",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "alb-Akin",
            "security_groups": [
              "sg-06bf271832c5830c2"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0801ec7090c543c7f"
              },
              {
                "subnet_id": "subnet-0d0e68c5436090f93"
              }
            ],
            "subnets": [
              "subnet-0801ec7090c543c7f",
              "subnet-0d0e68c5436090f93"
            ],
            "tags": {
              "Name": "alb2"
            },
            "vpc_id": "vpc-038417b7804b389fc",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "depends_on": [
            "aws_security_group.security",
            "aws_subnet.public_subnet1",
            "aws_subnet.public_subnet2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "alb_listener",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:632199730033:listener/app/alb-Akin/6cb21b663a2700dc/f327c0565d6a0a90",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:632199730033:targetgroup/alb-target-group-2/07dca2167c564bed",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:632199730033:listener/app/alb-Akin/6cb21b663a2700dc/f327c0565d6a0a90",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:632199730033:loadbalancer/app/alb-Akin/6cb21b663a2700dc",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "depends_on": [
            "aws_alb.alb",
            "aws_alb_target_group.alb_target_group_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "alb_target_group_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:632199730033:targetgroup/alb-target-group-2/07dca2167c564bed",
            "arn_suffix": "targetgroup/alb-target-group-2/07dca2167c564bed",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 5,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 2,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:632199730033:targetgroup/alb-target-group-2/07dca2167c564bed",
            "lambda_multi_value_headers_enabled": false,
            "name": "alb-target-group-2",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 1800,
                "enabled": true,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "name": "alb_target_group2"
            },
            "target_type": "instance",
            "vpc_id": "vpc-038417b7804b389fc"
          },
          "depends_on": [
            "aws_vpc.vpc_environment"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "default_gat",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-082e4be72776a3e13",
            "owner_id": "632199730033",
            "vpc_id": "vpc-038417b7804b389fc"
          },
          "depends_on": [
            "aws_vpc.vpc_environment"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "main_table_assoc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-000fa337c4d2f331a",
            "original_route_table_id": "rtb-0d570d36ecb07ce50",
            "route_table_id": "rtb-04655b10a7649790a",
            "vpc_id": "vpc-038417b7804b389fc"
          },
          "depends_on": [
            "aws_route_table.route-public",
            "aws_vpc.vpc_environment"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_1gate",
      "provider": "provider.aws"
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_2gate",
      "provider": "provider.aws"
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route-private1",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route-private2",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route-public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-04655b10a7649790a",
            "owner_id": "632199730033",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-082e4be72776a3e13",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "vpc Routing Table"
            },
            "vpc_id": "vpc-038417b7804b389fc"
          },
          "depends_on": [
            "aws_internet_gateway.default_gat",
            "aws_vpc.vpc_environment"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet1_table_assoc",
      "provider": "provider.aws"
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet2_table_assoc",
      "provider": "provider.aws"
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_subnesecurity",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:632199730033:security-group/sg-0d9235ce40a35a1f2",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d9235ce40a35a1f2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20190719212856329000000001",
            "name_prefix": null,
            "owner_id": "632199730033",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-038417b7804b389fc"
          },
          "depends_on": [
            "aws_vpc.vpc_environment"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:632199730033:security-group/sg-06bf271832c5830c2",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06bf271832c5830c2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20190719212856329000000002",
            "name_prefix": null,
            "owner_id": "632199730033",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-038417b7804b389fc"
          },
          "depends_on": [
            "aws_vpc.vpc_environment"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:632199730033:subnet/subnet-06aa39ac87379c8d3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.32.0/20",
            "id": "subnet-06aa39ac87379c8d3",
            "map_public_ip_on_launch": false,
            "owner_id": "632199730033",
            "vpc_id": "vpc-038417b7804b389fc"
          },
          "depends_on": [
            "aws_vpc.vpc_environment"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:632199730033:subnet/subnet-0c9044dc89a02b791",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.64.0/20",
            "id": "subnet-0c9044dc89a02b791",
            "map_public_ip_on_launch": false,
            "owner_id": "632199730033",
            "vpc_id": "vpc-038417b7804b389fc"
          },
          "depends_on": [
            "aws_vpc.vpc_environment"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:632199730033:subnet/subnet-0801ec7090c543c7f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.16.0/20",
            "id": "subnet-0801ec7090c543c7f",
            "map_public_ip_on_launch": true,
            "owner_id": "632199730033",
            "vpc_id": "vpc-038417b7804b389fc"
          },
          "depends_on": [
            "aws_vpc.vpc_environment"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:632199730033:subnet/subnet-0d0e68c5436090f93",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.48.0/20",
            "id": "subnet-0d0e68c5436090f93",
            "map_public_ip_on_launch": true,
            "owner_id": "632199730033",
            "vpc_id": "vpc-038417b7804b389fc"
          },
          "depends_on": [
            "aws_vpc.vpc_environment"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_environment",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:632199730033:vpc/vpc-038417b7804b389fc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0aa60dd903cdd2c06",
            "default_route_table_id": "rtb-04655b10a7649790a",
            "default_security_group_id": "sg-007b85d942a474395",
            "dhcp_options_id": "dopt-03f04744a173bd99c",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-038417b7804b389fc",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-04655b10a7649790a",
            "owner_id": "632199730033"
          }
        }
      ]
    }
  ]
}